# faiss

./: .gitignore  CMakeLists.txt
c_api/: CMakeLists.txt  IndexBinaryIVF_c.cpp  IndexBinaryIVF_c.h  IndexBinaryIVF_c_ex.cpp  IndexBinaryIVF_c_ex.h  IndexBinary_c.cpp  IndexBinary_c.h  IndexBinary_c_ex.cpp  IndexBinary_c_ex.h  IndexIVFFlat_c.cpp  IndexIVFFlat_c.h  IndexIVF_c.cpp  IndexIVF_c.h  IndexIVF_c_ex.cpp  IndexIVF_c_ex.h  Index_c.cpp  Index_c.h  Index_c_ex.cpp  Index_c_ex.h  example_c.c  index_factory_c.cpp  index_factory_c.h  index_io_c.cpp  index_io_c.h  index_io_c_ex.cpp  index_io_c_ex.h  jemalloc_conf.h  jemalloc_override_c.cpp  jemalloc_stat.h  jemalloc_stat_c.cpp  macros_impl.h
c_api/gpu/: CMakeLists.txt  DeviceUtils_c.cpp  DeviceUtils_c.h
c_api/impl/: AuxIndexStructures_c.cpp  AuxIndexStructures_c.h
c_api/utils/: distances_c.h
cmake/: FindJemalloc.cmake
faiss/: AutoTune.cpp  CMakeLists.txt  Clustering.cpp  IVFlib.cpp  Index.cpp  Index2Layer.cpp  IndexAdditiveQuantizer.cpp  IndexAdditiveQuantizerFastScan.cpp  IndexBinaryFlat.cpp  IndexBinaryFlat.h  IndexBinaryHNSW.cpp  IndexBinaryHash.cpp  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexFastScan.cpp  IndexFlat.cpp  IndexFlat.h  IndexFlatCodes.cpp  IndexFlatCodes.h  IndexHNSW.cpp  IndexIDMap.cpp  IndexIVF.cpp  IndexIVF.h  IndexIVFAdditiveQuantizer.cpp  IndexIVFAdditiveQuantizerFastScan.cpp  IndexIVFFastScan.cpp  IndexIVFFlat.cpp  IndexIVFPQ.cpp  IndexIVFPQ.h  IndexIVFPQFastScan.cpp  IndexIVFPQR.cpp  IndexIVFRaBitQ.cpp  IndexIVFRaBitQ.h  IndexLattice.cpp  IndexNNDescent.cpp  IndexNSG.cpp  IndexPQ.cpp  IndexRefine.cpp  IndexScalarQuantizer.cpp  IndexScalarQuantizer.h  (+7 more)
faiss/gpu/: GpuIndex.cu  GpuIndex.h  GpuIndexFlat.cu  GpuIndexFlat.h  GpuIndexIVF.cu
faiss/gpu/impl/: IVFBase.cuh  IVFFlat.cu  IVFFlat.cuh  IVFPQ.cu  IVFPQ.cuh  InterleavedCodes.cpp  RemapIndices.cpp
faiss/gpu/utils/: DeviceUtils.cu  DeviceUtils.h
faiss/impl/: AdditiveQuantizer.cpp  FaissException.cpp  HNSW.cpp  HNSW.h  LocalSearchQuantizer.cpp  NNDescent.cpp  NNDescent.h  NSG.cpp  NSG.h  PolysemousTraining.cpp  ProductAdditiveQuantizer.cpp  ProductQuantizer.cpp  ResultHandler.h  ScalarQuantizer.cpp  ScalarQuantizer.h  index_read.cpp  index_read_utils.h  io.cpp  io.h  lattice_Zn.cpp  platform_macros.h  residual_quantizer_encode_steps.cpp
faiss/invlists/: DirectMap.cpp  DirectMap.h  InvertedLists.cpp  InvertedLists.h  InvertedListsIOHook.cpp  InvertedListsIOHook.h  OnDiskInvertedLists.cpp  OnDiskInvertedLists.h
faiss/utils/: AlignedTable.h  Heap.cpp  distances.cpp  extra_distances.cpp  hamming.cpp  random.cpp  random.h  sorting.cpp  utils.cpp
jemalloc_faiss/: CMakeLists.txt  jemalloc_unix.sh
tests/: test_hamming.cpp
(+2 files in other folders)
